# poetry_conda

./: pyproject.toml
poetry_conda/: .env  keys.py  langchain_llm.py  learn_faiss.py  main.py
